--- a/src/Hones.Remit.Api/Hones.Remit.Api.csproj
+++ b/src/Hones.Remit.Api/Hones.Remit.Api.csproj
@@ -1,7 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   
   <ItemGroup>
+    <PackageReference Include="ErrorOr" />
+    <PackageReference Include="MassTransit.EntityFrameworkCore" />
+    <PackageReference Include="MassTransit.Extensions.DependencyInjection" />
+    <PackageReference Include="MassTransit.RabbitMQ" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="Swashbuckle.AspNetCore"/>
   </ItemGroup>
 
