--- a/src/Hones.Remit.Api/appsettings.json
+++ b/src/Hones.Remit.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=9500;Database=RemitDb;User ID=hones-dev;Password=password;"
+  }
 }
