--- a/src/Hones.Remit.Api/Hones.Remit.Api.csproj
+++ b/src/Hones.Remit.Api/Hones.Remit.Api.csproj
@@ -2,6 +2,7 @@
   
   <ItemGroup>
     <PackageReference Include="ErrorOr" />
+    <PackageReference Include="Hashids.net" />
     <PackageReference Include="MassTransit.EntityFrameworkCore" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" />
     <PackageReference Include="MassTransit.RabbitMQ" />
