--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,7 @@
   <ItemGroup Label="Main Packages">
     <PackageVersion Include="ErrorOr" Version="[2.0.1]" />
     <PackageVersion Include="Hashids.net" Version="1.7.0" />
+    <PackageVersion Include="MassTransit" Version="8.2.4" />
     <PackageVersion Include="MassTransit.EntityFrameworkCore" Version="[8.2.4]" />
     <PackageVersion Include="MassTransit.Extensions.DependencyInjection" Version="[7.3.1]" />
     <PackageVersion Include="MassTransit.RabbitMQ" Version="[8.2.4]" />
