--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,6 +8,7 @@
     <PackageVersion Include="MassTransit" Version="8.2.4" />
     <PackageVersion Include="MassTransit.EntityFrameworkCore" Version="[8.2.4]" />
     <PackageVersion Include="MassTransit.Extensions.DependencyInjection" Version="[7.3.1]" />
+    <PackageVersion Include="MassTransit.Quartz" Version="8.2.4" />
     <PackageVersion Include="MassTransit.RabbitMQ" Version="[8.2.4]" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="[8.0.6]" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="[8.0.7]" />
