--- a/src/Hones.Remit.Api/Hones.Remit.Api.csproj
+++ b/src/Hones.Remit.Api/Hones.Remit.Api.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="ErrorOr" />
     <PackageReference Include="Hashids.net" />
     <PackageReference Include="MassTransit.EntityFrameworkCore" />
+    <PackageReference Include="MassTransit.Quartz" />
     <PackageReference Include="MassTransit.RabbitMQ" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
