--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,6 +12,7 @@
     <PackageVersion Include="MassTransit.RabbitMQ" Version="[8.2.4]" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="[8.0.6]" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="[8.0.7]" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="[8.0.4]" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="[6.4.0]" />
   </ItemGroup>
