--- a/tests/Hones.Remit.Api.UnitTests/Hones.Remit.Api.UnitTests.csproj
+++ b/tests/Hones.Remit.Api.UnitTests/Hones.Remit.Api.UnitTests.csproj
@@ -2,4 +2,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Hones.Remit.Api\Hones.Remit.Api.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+  </ItemGroup>
 </Project>
